--- a/estilos/style.css
+++ b/estilos/style.css
@@ -2,15 +2,20 @@
     padding: 0;
     border: none;
     outline: none;
+    font-weight:normal;
+    list-style: none;
+ 
+    margin: 0 auto;
+    text-decoration: none;
+    text-align: center;
     border-radius: 0.8rem;
+    color: rgb(53, 51, 44);
     font-family: 'Poppins', sans-serif;
-    font-size: small;
     box-sizing: border-box;
 }
 
 a {
     color: inherit;
-    text-decoration: none;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
@@ -18,16 +23,20 @@ a {
 
 
 body {
-    background: linear-gradient(315deg, #e3e7f6 10%, #a8c7db 90%);
-    padding: 1rem;
+    background-color: #f4c531;
+    font-size: 16px;
+
 }
 
 .container_contenido {
-    width: 85%;
-    height: 80%;
-    margin: auto;
-    text-align: center;
-    background-color: white;
+    padding: 3em 2.8em;
+    width: 90vw;
+    max-width: 32em;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    background-color: #ffffff;
 }
 
 
@@ -35,11 +44,6 @@ body {
 button,
 label {
     cursor: pointer;
-}
-
-
-li {
-    list-style: none;
 }
 
 .btn-delete {
@@ -50,15 +54,11 @@ li {
 .boton {
     padding: 0.4rem;
     background-color: #e1f5c0;
-    border-radius: 1rem;
 }
 
 h5 {
     background-color: #a8c7db;
-    width: 35%;
-    margin: auto;
     padding: 0.2rem;
-    border-radius: 2rem;
 }
 
 .btn-delete {
@@ -69,19 +69,107 @@ h5 {
     background-color: rgb(211, 111, 111);
 }
 
-.list-group {
-border: 2px white solid;
-    background-color: #f0f4f7;
 
-}
 
-ul {
-    margin: auto;
-    width: 20rem;
-}
 
-/* DROP */
-
-.contenido-lista {
-    height: 10px;
-}
+/* recipe */
+.search-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 9fr 3fr;
+    gap: 1.2em;
+  }
+  .search-container input {
+    font-size: 1em;
+    padding: 0.6em;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #202030;
+  }
+  .search-container button {
+    font-size: 1em;
+    background-color: #f4c531;
+    border: none;
+    font-weight: 600;
+    border-radius: 0.3em;
+  }
+  img {
+    display: block;
+    width: 50%;
+    margin: 1.8em auto 0 auto;
+  }
+  .details {
+    background-color: #f4c531;
+    position: relative;
+    margin: -4.3em 0 0 0;
+    text-align: center;
+    padding: 0.6em 0;
+  }
+  .details h2 {
+    font-size: 1.2em;
+    font-weight: 600;
+  }
+  .details h4 {
+    font-size: 1em;
+    font-weight: 400;
+  }
+  #show-recipe {
+    font-size: 1em;
+    position: relative;
+    left: 75%;
+    padding: 0.9em 0.6em;
+    background-color: #f4c531;
+    border: none;
+    top: 1.5em;
+    border-radius: 0.3em;
+    font-weight: 600;
+  }
+  #recipe {
+    position: absolute;
+    background-color: #ffffff;
+    min-height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    border-radius: 0.6em;
+    display: none;
+  }
+  #recipe pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    padding: 2.5em 1.2em 1.2em 1.2em;
+    font-size: 0.92em;
+    color: #303040;
+  }
+  #hide-recipe {
+    font-size: 1em;
+    position: relative;
+    width: 1.8em;
+    height: 1.8em;
+    background-color: #f4c531;
+    border: none;
+    top: 1.2em;
+    left: 90%;
+    border-radius: 0.3em;
+  }
+  ul {
+    font-size: 1em;
+    position: relative;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 0.8em 1.1em;
+    padding: 1.2em 0 0 1.2em;
+    color: #303040;
+    text-transform: capitalize;
+  }
+  h3 {
+    text-align: center;
+    margin-top: 1.8em;
+    color: #202030;
+  }
+  @media screen and (max-width: 500px) {
+    .container {
+      font-size: 14px;
+    }
+  }
