--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,75 +1,87 @@
-
 * {
-    padding: 0;
-    border: none;
-    outline: none;
-    font-weight:normal;
-    list-style: none;
-    margin: 0 auto;
-    text-decoration: none;
-    text-align: center;
-    border-radius: 0.8rem;
-    color: rgb(53, 51, 44);
-    font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+  padding: 0;
+  border: none;
+  outline: none;
+  font-weight: normal;
+  list-style: none;
+  margin: 0 auto;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 0.8rem;
+  color: rgb(53, 51, 44);
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
 
 a {
-    color: inherit;
+  font-weight: bolder;
+    color: rgb(53, 51, 44);
+}
+li:hover, a:hover {
+  color: rgb(85, 82, 73);
+  list-style: none;
+  text-decoration: none;
+  text-align: center;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
+a:hover {
+  color: rgb(53, 51, 44);
+}
+
 li:hover {
-  padding: 0.4rem;
-width: 20%;
-    border-radius: 3rem;
-    background-color: #b4ac346e;
+  width: 20%;
+  border-radius: 3rem;
+  background-color: #b4ac346e;
 }
 
 body {
-    background-color: #f4c531;
-    padding: 3em 2.8em;
-    font-size: 16px;
+  background-color: #f4c531;
+  padding: 3em 2.8em;
+  font-size: 16px;
 
 }
 
 .container_contenido {
-    padding: 3em 2.8em;
-    width: 96vw;
-    max-width: 32em;
-    background-color: #ffffff;
+  padding: 3em 2.8em;
+  width: 96vw;
+  max-width: 32em;
+  background-color: #ffffff;
 }
 
 
 /* BOTONES PERSONALIZACION*/
 button,
 label {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .btn-delete {
-    background-color: #d9e8f0;
+  background-color: #d9e8f0;
 }
 
 .btn-add,
 .boton {
-    padding: 0.4rem;
-    border-radius: 3rem;
-    background-color: #e09f76;
+  padding: 0.4rem;
+  border-radius: 3rem;
+  background-color: #bace4d;
 }
 
+.boton:hover {
+  background-color: #adeb74;
+}
 h5 {
-    background-color: #f0b71c;
-    padding: 0.2rem;
+  background-color: #f0b71c;
+  padding: 0.2rem;
 }
 
 .btn-delete {
-    border-radius: 3rem;
-    width: 25px;
-    height: 25px;
-    color: white;
-    background-color: rgb(173, 50, 46);
+  border-radius: 3rem;
+  width: 25px;
+  height: 25px;
+  color: white;
+  background-color: rgb(173, 50, 46);
 }
 
 
@@ -77,81 +89,87 @@ h5 {
 
 /* recipe */
 .search-container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 9fr 3fr;
-    gap: 1.2em;
-  }
-  .search-container input {
-    font-size: 1em;
-    padding: 0.6em;
-    border: none;
-    outline: none;
-    border-bottom: 2px solid #f4c73123;
-  }
-  .search-container button {
-    font-size: 1em;
-    background-color: #f4c531;
-    border: none;
-    font-weight: 600;
-    border-radius: 0.3em;
-  }
-  img {
-    display: block;
-    width: 50%;
-    margin: 1.8em auto 0 auto;
-  }
-  .details {
-    background-color: #f4c531;
-    position: relative;
-    margin: -4.3em 0 0 0;
-    text-align: center;
-    padding: 0.6em 0;
-  }
-  .details h2 {
-    font-size: 1.2em;
-    font-weight: 600;
-  }
-  .details h4 {
-    font-size: 1em;
-    font-weight: 400;
-  }
+  width: 100%;
+  display: grid;
+  grid-template-columns: 9fr 3fr;
+  gap: 1.2em;
+}
 
- 
-  @media screen and (max-width: 500px) {
-    .container {
-      font-size: 14px;
-    }
-  }
+.search-container input {
+  font-size: 1em;
+  padding: 0.6em;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid #f4c73123;
+}
 
-  
+.search-container button {
+  font-size: 1em;
+  background-color: #f4c531;
+  border: none;
+  font-weight: 600;
+  border-radius: 0.3em;
+}
+
+img {
+  display: block;
+  width: 50%;
+  margin: 1.8em auto 0 auto;
+}
+
+.details {
+  background-color: #f4c531;
+  position: relative;
+  margin: -4.3em 0 0 0;
+  text-align: center;
+  padding: 0.6em 0;
+}
+
+.details h2 {
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+.details h4 {
+  font-size: 1em;
+  font-weight: 400;
+}
+
+
+@media screen and (max-width: 500px) {
+  .container {
+    font-size: 14px;
+  }
+}
+
+
 
 /* SOCIAL PANEL CSS */
 
 .floating-text {
-	background-color: #001F61;
-	border-radius: 10px 10px 0 0;
-	color: #fff;
-	font-family: 'Muli';
-	padding: 7px 15px;
-	position: fixed;
-	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
+  background-color: #001F61;
+  border-radius: 10px 10px 0 0;
+  color: #fff;
+  font-family: 'Muli';
+  padding: 7px 15px;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .floating-text a {
-	color: #FF7500;
-	text-decoration: none;
+  color: #FF7500;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 480px) {
 
-	.social-panel-container.visible {
-		transform: translateX(0px);
-	}
-	
-	.floating-btn {
-		right: 10px;
-	}
+  .social-panel-container.visible {
+    transform: translateX(0px);
+  }
+
+  .floating-btn {
+    right: 10px;
+  }
 }
